# bt_api_py

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CODE_QUALITY.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENT_REPORT.md  IMPROVEMENT_REPORT_FINAL.md  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  PANCAKESWAP_IMPLEMENTATION.md  PROJECT_CONTEXT.md  README.en.md  README.md  SECURITY_COMPLIANCE.md  _generate_docs.py  analyze_code_quality.py  assign_files_to_agents.py  batch_improve.py  batch_improve_bars.py  batch_improve_tickers.py  code_quality_analysis.txt  conftest.py  coverage-full-gate.xml  coverage-unit.xml  coverage_analysis.md  docs-requirements.txt  error_framework_bybit_addition.py  extract_capabilities_v2.py  improve_code_quality.py  improve_containers.py  install_unix.sh  install_win.bat  mkdocs.yml  (+13 more)
_bmad-output/: project-context.md
_templates/: .readthedocs.yaml  README.md  mkdocs.yml
agent_tasks/: agent_1_tasks.json  agent_3_tasks.json
bt_api/: install_and_test_all.py  readme.md
bt_api_py/: __init__.py  _compat.py  _plugin_shims.py  _version.py  auth_config.py  balance_utils.py  bt_api.py  cache.py  config_loader.py  connection_pool.py  ctp_env_selector.py  error.py  error_framework.py  error_framework_cryptocom.py  error_framework_gemini.py  error_framework_hitbtc.py  error_framework_htx.py  error_framework_mexc.py  error_framework_pancakeswap_error_translator.py  event_bus.py  exceptions.py  feed_registry.py  forwarding.py  instrument_manager.py  logging_factory.py  rate_limiter.py  registry.py  security.py  symbol_manager.py  websocket_manager.py
configs/: hitbtc.yaml  hyperliquid.yaml  ibkr_cookies.json  korbit.yaml  latoken.yaml  localbitcoins.yaml  phemex.yaml  raydium.yaml  swyftx.yaml  uniswap.yaml
docker/: monitoring-stack.yml
docs/: AGENTS.md  CODE_QUALITY.md  CODE_QUALITY_IMPROVEMENTS.md  COMMENT_SETUP.md  I18N_SETUP.md  IMPROVEMENT_EXECUTION_PLAN.md  NEXT_STEPS.md  QUICK_START_TESTING.md  README_IMPROVEMENTS.md  SECURITY_COMPLIANCE.md  api_reference.md  architecture.md  best_practices.md  binance_api_implementation_status.md  binance_api_missing_apis.md  binance_api_todo.md  change_log.md  code-quality-report.md  comprehensive-improvement-plan.md  ctp_quickstart.md  ctp_swig_refactoring_plan.md  developer_guide.md  development-guide.md  error_handling.md  exchange_integration_patterns.md  exchange_integration_skill_design.md  faq.md  ib_quickstart.md  improvement-report-v2.md  improvement-report.md  index.en.md  index.md  installation.en.md  installation.md  multi_strategy_architecture.md  okx_api_todo.md  params.md  performance.md  phase3-completion-report.md  project-overview.md  (+17 more)
examples/: monitoring_examples.py  production_monitoring_demo.py  risk_management_basic_demo.py  risk_management_clean_demo.py  risk_management_demo.py  risk_management_final_demo.py  risk_management_root_demo.py  risk_management_simple_demo.py  sub_account_example.py  websocket_advanced_example.py
keys/: key_1772939704_503f8c8f.key  key_1772939704_961e6239.key  key_1772939704_d56aa3a3.key  key_1772939860_27e777b3.key  key_1772939860_92f6b5b7.key  key_1772939860_be27a4cf.key  key_1772939907_17089305.key  key_1772939907_92561e0d.key  key_1772939907_f8c81a96.key  key_1772939996_50056890.key  key_1772939996_ca06b4f8.key  key_1772939996_cf121c70.key  key_1772940471_01b2f31f.key  key_1772940471_100ad0e2.key  key_1772940471_87a4713f.key  key_1772944791_75c44dbc.key  key_1772944791_e069f9a5.key  key_1772944791_fe13323a.key  key_1772950490_9b27e84c.key  key_1772950490_be6045f6.key  key_1772950490_be825a78.key  key_1772953117_31fe103b.key  key_1772953117_781cca37.key  key_1772953117_efeaebab.key  key_1772953257_1a5e9efc.key  key_1772953257_ac61b5c2.key  key_1772953257_c46360d8.key  key_1772953324_58e68678.key  key_1772953324_78a43fb2.key  key_1772953324_b6c85bf9.key  key_1772953425_05951986.key  key_1772953425_73669c70.key  key_1772953425_fa1cffd0.key  key_1772953622_4b10585e.key  key_1772953622_918c5d67.key  key_1772953622_b6dc64fd.key  key_1772954337_a7581b5e.key  key_1772954337_bdfd5b22.key  key_1772954337_e39ede09.key  key_1772954803_0c2791b8.key  (+11 more)
monitoring/: IMPLEMENTATION_SUMMARY.md  README.md
scripts/: add_all_exports.py  add_feed_type_annotations.py  analyze_code_lines.py  analyze_coverage.py  analyze_slow_tests.py  auto_improve_code.py  batch_delete_core_duplicates.py  batch_improve.py  batch_improve_code.py  batch_improve_orders.py  batch_migrate_imports.py  check_code_quality.py  clean_markdown.py  clean_markdown.sh  clear_root_logs.sh  diagnose_okx.py  distribute_evenly.py  distribute_quality_tasks.py  extract_capabilities.py  fix_module_docstring_position.py  fix_pytestmark_position.py  generate_docs_simple.py  generate_enhanced_docs.py  generate_exchange_support_docs.py  get_ibkr_cookie.py  improve_code_quality.py  improve_code_quality_agent.py  improve_code_quality_batch.py  improve_code_v2.py  improve_okx_code.py  improve_trade_files.py  install_bt_api_submodules.py  login_ibkr_gateway.py  optimize_code.sh  remove_prints.py  remove_prints_batch2.py  run_auth_tests.sh  run_base_tests.sh  run_exchange_tests.sh  run_full_coverage.py  (+12 more)
tests/: conftest.py  conftest_test_data.py  test_account.py  test_advanced_connection_manager.py  test_analysis_log.py  test_async_base.py  test_async_send_message.py  test_audit_logger.py  test_auto_init_mixin.py  test_balance.py  test_balancer_pool.py  test_bar.py  test_bequant_ticker.py  test_bigone_ticker.py  test_binance_balance.py  test_binance_exchange_data.py  test_binance_funding_rate.py  test_binance_income.py  test_binance_mark_price.py  test_binance_order.py  test_binance_position.py  test_binance_symbol.py  test_bitbank_ticker.py  test_bitrue_ticker.py  test_bitso_ticker.py  test_bitstamp_ticker.py  test_bitunix_ticker.py  test_bitvavo_ticker.py  test_browser_cookies.py  test_bt_api.py  test_bt_api_helpers.py  test_bt_api_quality.py  test_bt_api_unified.py  test_bydfi_ticker.py  test_cache.py  test_calculate_numbers.py  (+110 more)
(+3877 files in other folders)
